# parqlite

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
examples/: import_binance_data.py  import_binance_klines.py  maintain_metadata.py  read_from_binance.py
skills/parqlite/: SKILL.md
skills/parqlite/agents/: openai.yaml
src/parqlite/: __init__.py  cli.py  db.py  duckdb_backend.py  errors.py  iceberg.py  io.py  partitioning.py  properties.py  schema.py  snapshots.py  types.py
src/parquetdb/: __init__.py  cli.py  db.py  duckdb_backend.py  errors.py  iceberg.py  io.py  partitioning.py  schema.py  snapshots.py  types.py  ui.py
tests/: test_cli.py  test_db.py  test_duckdb_backend.py  test_partitioning.py  test_schema.py  test_snapshots.py  test_ui.py
